Set up the platform in SINGLE_SCHOOL_MODE by default #87

--- a/example.env
+++ b/example.env
@@ -44,8 +44,12 @@ POSTMARK_API_TOKEN=api_token_from_postmark
 POSTMARK_HOOK_ID=bounce_webhook_username_from_postmark
 POSTMARK_HOOK_SECRET=bounce_webhook_password_from_postmark
 
-# Domain which has been configured for re-direction after SSO with OAuth.
+# After setting up OAuth credentials, turn on SSO and set up the domain which has been configured for re-direction.
+SSO_ENABLED=false
 SSO_DOMAIN=sso.school.localhost
+
+# Disable to allow running multiple schools.
+SINGLE_SCHOOL_MODE=true
 
 # Which driver to use when running tests. See `rails_helper.rb` for options.
 JAVASCRIPT_DRIVER=chrome
