Use the SSO_ENABLED flag to decide which login options to show

--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -52,6 +52,7 @@ common: &common
   typeform:
     screening_url: <%= ENV['TYPEFORM_SCREENING_URL'] %>
   sso_domain: <%= ENV['SSO_DOMAIN'] %>
+  sso_enabled: <%= ENV['SSO_ENABLED'] == 'true' %>
   max_daily_markdown_attachments: <%= ENV['MAX_DAILY_MARKDOWN_ATTACHMENTS']&.to_i || 50 %>
 
 development:
